add Ass3 initial

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.analysis.extraPaths": [
         "./initial/src/main/mt22/parser/main/mt22/parser",
         "./Assignment2/src/main/mt22/utils",
-        "./Assignment2/target"
+        "./Assignment2/target",
+        "./Assignment3/src/main/mt22/utils"
     ]
 }
